2009-03-12  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* build/preprocess_mli/generate_mli.ml: created

	* build/optcomp/optcomp.ml: [print_token] now accepts optional argument [oc]

	* build/generate_mli.ml: hijacked into only doing the sub-module extraction part

2009-03-12  Jeremie Dimino <jeremie@dimino.org>

	* build/generate_mli.ml: added
	
2009-03-12  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/pMap.ml: [enum] changed enumeration order

	* testsuite/test_pmap.ml: created

	* src/core/extlib/refList.ml*: [backwards], [of_backwards] added

2009-03-11  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/innerIO.ml*: [onclose_out] added

	* src/core/extlib/extFormat.ml: [newline_of], [spaces_of] added

	* src/core/extlib/extFormat.ml: [std_formatter], [err_formatter] now flushed at exit

	* src/core/extlib/extFormat.ml: [pp_set_formatter_output] now uses [pp_set_all_formatter_output_functions]

	* src/core/extlib_threads/IOThreads.ml: now using [RMutex] rather than [Mutex]

	* src/core/extlib_threads/extMutex.ml: [DebugMutex] created

	* build/odoc_extract_mli.ml: recreated

	* src/batteries_toolchain/batteries_help.ml: applied patch by kaustuv

	* src/core/extlib/extBigarray.ml*: applied patch by hcarty

	* src/core/extlib/extBigarray.ml*: [Genarray.iter], [Genarray.iteri], [Genarray.map], [Genarray.mapi], 

2009-03-10  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* build/odoc_tags.ml: now uses [Odoc_batteries_factored]

	* build/odoc_batteries_factored.ml: created

	* src/batteries_toolchain/batteries_help.ml: [print_module] now uses flattened name for display

	* myocamlbuild.ml: [sort_modules] now invokes [Depsort.add_node]
	
	* myocamlbuild.ml: [Depsort.add] renamed [Depsort.add_dependency]

	* src/core/extlib/extPervasives.ml: [open_in_bin], [open_in_gen], [open_out_bin], [open_out_gen] now clean-up
