@@ -666,8 +666,8 @@ val inherit_out:
   ?write:(char -> unit) ->
   ?output:(string -> int -> int -> int) -> 
   ?flush:(unit -> unit) ->
-  ?close:(unit -> 'a) -> 
-  'a output -> 'a output
+  ?close:(unit -> unit) -> 
+  'a output -> unit output
 (**
    Simplified and optimized version of {!wrap_out} whenever only
    one output appears as dependency.
